# CommonCustomView

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zjj/commoncustomview/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CarColorPlateLocation.cpp  CarColorPlateLocation.hpp  CarPlateLocation.cpp  CarPlateLocation.hpp  CarPlateRecgnize.cpp  CarPlateRecgnize.hpp  CarSobelPlateLocation.cpp  CarSobelPlateLocation.hpp  FFmpegAudio.cpp  FFmpegAudio.h  FFmpegMusic.cpp  FFmpegMusic.h  FFmpegVedio.cpp  FFmpegVedio.h  ImageProcess.cpp  ImageProcess.h  Log.h  common.h  native-lib.cpp
app/src/main/cpp/include/opencv2/core/: types.hpp
app/src/main/java/com/zjj/commoncustomview/: Carplate.java  CarplateActivity.java  FFmpegActivity.java  FaceDetetionView.java  FaceDetetionViewActivity.java  ImageProcess.java  ImageProcessActivity.java  MainActivity.java  TestServer.java  VideoView.java  ZJJPlayer.java
app/src/main/res/layout/: activity_carplate.xml  activity_face_detetion.xml  activity_ffmpeg.xml  activity_image_process.xml  activity_main.xml
app/src/main/res/menu/: menu.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zjj/commoncustomview/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
